--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "gatsby": "^5.7.0",
+    "gatsby-plugin-sass": "^6.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.59.3"
   },
   "repository": {
     "type": "git",
